[wallet-extension] fix iphone status bar overlap

--- a/src/theme/layout.scss
+++ b/src/theme/layout.scss
@@ -87,3 +87,7 @@ ion-content {
   transform: translateY(-100%);
   --webkit-transform: translateY(-100%);
 }
+
+ion-footer > * {
+  padding-bottom: var(--ion-safe-area-bottom, 0);
+}
